--- a/portfolio.html
+++ b/portfolio.html
@@ -35,15 +35,15 @@
         </section>
         <section id="portfolio">
             <h2>~ My Work ~</h2>
-            <div class="project">Project 1</div>
-            <div class="project">Project 2</div>
+            <a href="https://github.com/yadavrajeev07/Web-Development.git"><div class="project">Project 1</div></a> 
+            <a href="https://github.com/yadavrajeev07/Portfolio-website-using-HTML-and-CSS.git"><div class="project">Project 2</div></a>   
             <div class="project">Project 3</div>
             <div class="project">Project 4</div>
         </section>
         <section id="contact">
             <h2>~ Keep in Touch ~</h2>
           <a href="https://www.instagram.com/yadavrajeev07/">
-                <button>Send me a message</button>
+                <button class="button">Send me a message</button>
             </a>
         </section>
     </main>
